admin/index_control.php all setting hide 电子商务;model/log.php news_admin to administrator;

--- a/framework/view/all_setting.html
+++ b/framework/view/all_setting.html
@@ -26,7 +26,7 @@ function rand_click()
 	<li class="on" onclick="$.admin.group(this)" name="main" title="{lang网站基本信息}">{lang基本设置}</li>
 	<li onclick="$.admin.group(this)" name="admin" title="{lang开关网站，设置风格，语言等功能}">{lang扩展信息}</li>
 	<li onclick="$.admin.group(this)" name="seo" title="{lang全站SEO信息设置}">{langSEO优化}</li>
-	<li onclick="$.admin.group(this)" name="biz" title="{lang启用电子商务功能}">{lang电子商务}</li>
+	<!-- <li onclick="$.admin.group(this)" name="biz" title="{lang启用电子商务功能}">{lang电子商务}</li> -->
 	<li onclick="$.admin.group(this)" name="upload" title="{lang配置游客和会员的上传属性}">{lang上传配置}</li>
 </ul>
 
